--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -186,6 +186,10 @@ allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 171.25.193.20;
+allow 171.25.193.234;
+allow 171.25.193.235;
+allow 171.25.193.25;
 allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
@@ -500,7 +504,6 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
-allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -730,6 +733,10 @@ allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
+allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
@@ -1439,7 +1446,6 @@ allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
-allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
@@ -1713,7 +1719,6 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.171.173.200;
 allow 37.114.41.119;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1804,6 +1809,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
+allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
@@ -1838,7 +1844,6 @@ allow 5.255.100.219;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
-allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
@@ -1861,6 +1866,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.226.107.242;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1918,6 +1924,7 @@ allow 81.17.20.59;
 allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.62;
+allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -2010,6 +2017,10 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.46;
+allow 94.177.106.54;
+allow 94.177.106.55;
+allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
