--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -34,6 +34,10 @@ deny 2001:620:20d0::24;
 deny 2001:638:301:f732::150;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
+deny 2001:67c:289c::20;
+deny 2001:67c:289c:2::234;
+deny 2001:67c:289c:2::235;
+deny 2001:67c:289c::25;
 deny 2001:67c:289c:4::77;
 deny 2001:67c:289c:4::78;
 deny 2001:67c:289c:4::79;
@@ -499,7 +503,6 @@ deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
-deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
