--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -140,10 +140,10 @@ allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
+allow 2602:fccf:310:1::a;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
