--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -41,7 +41,6 @@ set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.167;
-set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.198;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
@@ -91,7 +90,6 @@ set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
-set_real_ip_from 107.20.166.34;
 set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.16.251;
 set_real_ip_from 108.181.27.205;
@@ -131,7 +129,6 @@ set_real_ip_from 130.193.15.186;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.47.104.213;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.184.245;
@@ -1064,6 +1061,7 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2402:1f00:8201:61::2d91:af20;
 set_real_ip_from 2402:1f00:8201:61::da05:d4c6;
 set_real_ip_from 2407:3640:2207:8882::1;
+set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.35;
@@ -1140,6 +1138,7 @@ set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
+set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
 set_real_ip_from 2605:6400:30:f174:1:2:3:4;
 set_real_ip_from 2605:6400:30:f174::42;
@@ -1147,6 +1146,7 @@ set_real_ip_from 2605:6400:30:f174:42:42::;
 set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
+set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1176,7 +1176,6 @@ set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
-set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1714,6 +1713,7 @@ set_real_ip_from 31.133.0.26;
 set_real_ip_from 31.133.0.36;
 set_real_ip_from 31.133.1.14;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.224.218.71;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
@@ -1922,7 +1922,6 @@ set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
