--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -75,6 +75,7 @@ set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.18;
 set_real_ip_from 107.189.5.19;
 set_real_ip_from 107.189.5.7;
+set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.6.246;
 set_real_ip_from 107.189.6.36;
 set_real_ip_from 107.189.7.114;
@@ -121,7 +122,6 @@ set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 125.253.31.196;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
@@ -132,7 +132,6 @@ set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.47.104.213;
 set_real_ip_from 139.99.172.11;
-set_real_ip_from 139.99.184.245;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.239.146.142;
 set_real_ip_from 141.95.59.93;
@@ -159,6 +158,7 @@ set_real_ip_from 148.113.196.231;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
+set_real_ip_from 15.204.224.241;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -324,6 +324,14 @@ set_real_ip_from 185.195.71.8;
 set_real_ip_from 185.195.71.9;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
+set_real_ip_from 185.220.100.240;
+set_real_ip_from 185.220.100.241;
+set_real_ip_from 185.220.100.242;
+set_real_ip_from 185.220.100.243;
+set_real_ip_from 185.220.100.252;
+set_real_ip_from 185.220.100.253;
+set_real_ip_from 185.220.100.254;
+set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
@@ -623,7 +631,6 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
-set_real_ip_from 193.200.17.85;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.155;
 set_real_ip_from 193.218.118.173;
@@ -1046,7 +1053,6 @@ set_real_ip_from 2400:d321:2195:2012::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2402:1f00:8201:61::da05:d4c6;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.58.56.220;
@@ -1055,6 +1061,7 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.90;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:93ff:fe2b:34f6;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1471,6 +1478,14 @@ set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 set_real_ip_from 2a0a:c801:1:5::5d;
+set_real_ip_from 2a0b:f4c0:16c:1::1;
+set_real_ip_from 2a0b:f4c0:16c:13::1;
+set_real_ip_from 2a0b:f4c0:16c:14::1;
+set_real_ip_from 2a0b:f4c0:16c:15::1;
+set_real_ip_from 2a0b:f4c0:16c:16::1;
+set_real_ip_from 2a0b:f4c0:16c:2::1;
+set_real_ip_from 2a0b:f4c0:16c:3::1;
+set_real_ip_from 2a0b:f4c0:16c:4::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
@@ -1641,7 +1656,6 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
-set_real_ip_from 2a0f:9400:7e11:b852::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1663,7 +1677,6 @@ set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:1fc0:10::debc:26b9;
 set_real_ip_from 2a10:1fc0:1::e016:2586;
-set_real_ip_from 2a10:1fc0:8::a061:729b;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1689,7 +1702,6 @@ set_real_ip_from 31.133.0.26;
 set_real_ip_from 31.133.0.36;
 set_real_ip_from 31.133.1.14;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.200.96.153;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.190.85;
@@ -1837,6 +1849,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.235.128.178;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1847,9 +1860,7 @@ set_real_ip_from 54.36.209.254;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 5.61.51.143;
 set_real_ip_from 5.79.66.19;
-set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.214;
 set_real_ip_from 62.182.84.146;
@@ -1862,6 +1873,7 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
+set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.220.196.253;
@@ -1903,7 +1915,6 @@ set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
-set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.17.9.83;
@@ -1929,7 +1940,6 @@ set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.82.71;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
-set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
