--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -135,6 +135,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::148;
 allow 2602:fc24:12:81a6::1;
@@ -400,6 +401,9 @@ allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
+allow 2804:391c:0:18:1c00:1cff:fe00:ce;
+allow 2804:391c:0:18:1c00:adff:fe00:cc;
+allow 2804:391c:0:18:1c00:ceff:fe00:c0;
 allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
@@ -503,6 +507,7 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:112:31::1;
+allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:541:150:6::1;
 allow 2a05:541:152:4::1;
@@ -537,8 +542,10 @@ allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-allow 2a0a:c801:1:5::5d;
+allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -546,6 +553,11 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
