--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,9 +101,7 @@ deny 108.181.69.243;
 deny 108.61.158.147;
 deny 108.61.189.136;
 deny 109.169.33.163;
-deny 109.248.144.73;
 deny 109.248.147.137;
-deny 109.248.150.36;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -124,6 +122,7 @@ deny 121.160.200.13;
 deny 121.78.28.175;
 deny 123.253.35.32;
 deny 125.212.241.131;
+deny 125.253.31.196;
 deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
@@ -170,7 +169,6 @@ deny 154.213.185.230;
 deny 154.213.185.254;
 deny 154.26.159.157;
 deny 155.138.161.171;
-deny 155.94.192.114;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
@@ -217,8 +215,10 @@ deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.58.121.177;
-deny 176.58.89.182;
 deny 176.97.114.202;
+deny 177.54.158.14;
+deny 177.54.158.194;
+deny 177.54.158.206;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
@@ -247,6 +247,7 @@ deny 179.43.167.195;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
+deny 18.215.190.29;
 deny 184.105.48.40;
 deny 184.75.221.107;
 deny 185.100.85.132;
@@ -298,7 +299,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -330,6 +330,14 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -1042,6 +1050,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:6180:100:d0::2c:3001;
@@ -1069,6 +1078,7 @@ deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::148;
 deny 2602:fc24:12:81a6::1;
@@ -1335,6 +1345,9 @@ deny 2620:7:6001::ffff:c759:e659;
 deny 2620:95:4007::111;
 deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
+deny 2804:391c:0:18:1c00:1cff:fe00:ce;
+deny 2804:391c:0:18:1c00:adff:fe00:cc;
+deny 2804:391c:0:18:1c00:ceff:fe00:c0;
 deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
@@ -1438,6 +1451,7 @@ deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:112:31::1;
+deny 2a05:541:121:33::1;
 deny 2a05:541:141:2c::1;
 deny 2a05:541:150:6::1;
 deny 2a05:541:152:4::1;
@@ -1472,8 +1486,10 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-deny 2a0a:c801:1:5::5d;
+deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -1481,6 +1497,11 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1807,7 +1828,6 @@ deny 51.222.84.46;
 deny 51.38.113.118;
 deny 51.38.225.46;
 deny 51.38.81.135;
-deny 5.181.156.36;
 deny 51.81.222.62;
 deny 51.81.254.14;
 deny 51.81.254.15;
@@ -1846,7 +1866,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.165.196.96;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1907,6 +1926,7 @@ deny 82.221.131.5;
 deny 82.221.139.190;
 deny 82.68.49.227;
 deny 82.85.247.254;
+deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
@@ -1980,7 +2000,6 @@ deny 94.102.51.15;
 deny 94.140.115.63;
 deny 94.142.241.194;
 deny 94.142.244.16;
-deny 94.158.246.64;
 deny 94.16.112.22;
 deny 94.16.116.81;
 deny 94.16.116.86;
