--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -101,9 +101,7 @@ set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.158.147;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.248.144.73;
 set_real_ip_from 109.248.147.137;
-set_real_ip_from 109.248.150.36;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -124,6 +122,7 @@ set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
+set_real_ip_from 125.253.31.196;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
@@ -170,7 +169,6 @@ set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 155.138.161.171;
-set_real_ip_from 155.94.192.114;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -217,8 +215,10 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
-set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.54.158.14;
+set_real_ip_from 177.54.158.194;
+set_real_ip_from 177.54.158.206;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -247,6 +247,7 @@ set_real_ip_from 179.43.167.195;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.215.190.29;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.107;
 set_real_ip_from 185.100.85.132;
@@ -298,7 +299,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -330,6 +330,14 @@ set_real_ip_from 185.220.100.240;
 set_real_ip_from 185.220.100.241;
 set_real_ip_from 185.220.100.242;
 set_real_ip_from 185.220.100.243;
+set_real_ip_from 185.220.100.244;
+set_real_ip_from 185.220.100.245;
+set_real_ip_from 185.220.100.246;
+set_real_ip_from 185.220.100.247;
+set_real_ip_from 185.220.100.248;
+set_real_ip_from 185.220.100.249;
+set_real_ip_from 185.220.100.250;
+set_real_ip_from 185.220.100.251;
 set_real_ip_from 185.220.100.252;
 set_real_ip_from 185.220.100.253;
 set_real_ip_from 185.220.100.254;
@@ -1042,6 +1050,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:6180:100:d0::2c:3001;
@@ -1069,6 +1078,7 @@ set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:f9f3:0:2::148;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1335,6 +1345,9 @@ set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2804:391c:0:18:1c00:1cff:fe00:ce;
+set_real_ip_from 2804:391c:0:18:1c00:adff:fe00:cc;
+set_real_ip_from 2804:391c:0:18:1c00:ceff:fe00:c0;
 set_real_ip_from 2a00:11c0:1b:aa2::5;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
@@ -1438,6 +1451,7 @@ set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:112:31::1;
+set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:141:2c::1;
 set_real_ip_from 2a05:541:150:6::1;
 set_real_ip_from 2a05:541:152:4::1;
@@ -1472,8 +1486,10 @@ set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-set_real_ip_from 2a0a:c801:1:5::5d;
+set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
+set_real_ip_from 2a0b:f4c0:16c:11::1;
+set_real_ip_from 2a0b:f4c0:16c:12::1;
 set_real_ip_from 2a0b:f4c0:16c:13::1;
 set_real_ip_from 2a0b:f4c0:16c:14::1;
 set_real_ip_from 2a0b:f4c0:16c:15::1;
@@ -1481,6 +1497,11 @@ set_real_ip_from 2a0b:f4c0:16c:16::1;
 set_real_ip_from 2a0b:f4c0:16c:2::1;
 set_real_ip_from 2a0b:f4c0:16c:3::1;
 set_real_ip_from 2a0b:f4c0:16c:4::1;
+set_real_ip_from 2a0b:f4c0:16c:5::1;
+set_real_ip_from 2a0b:f4c0:16c:6::1;
+set_real_ip_from 2a0b:f4c0:16c:7::1;
+set_real_ip_from 2a0b:f4c0:16c:8::1;
+set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
@@ -1807,7 +1828,6 @@ set_real_ip_from 51.222.84.46;
 set_real_ip_from 51.38.113.118;
 set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.38.81.135;
-set_real_ip_from 5.181.156.36;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
@@ -1846,7 +1866,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.165.196.96;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1907,6 +1926,7 @@ set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
+set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
@@ -1980,7 +2000,6 @@ set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
-set_real_ip_from 94.158.246.64;
 set_real_ip_from 94.16.112.22;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
